Upgrade postgres CorDapp to JDK17